--- a/K42Store/Views/Home/Index.cshtml
+++ b/K42Store/Views/Home/Index.cshtml
@@ -1,7 +1,12 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@{
     ViewData["Title"] = "Home Page";
 }
-
+Session : @Context.Session.GetString("HoTen") <br />
+Name : @if (Context.Session.GetString("Name") == null)
+{
+    <text>Chưa có</text>
+}
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -52,7 +57,6 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
 <div class="row">
     <div class="col-md-3">
         <h2>Application uses</h2>
